--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 								<article>
 									<header>
 										
-										<h2><a href="https://github.com/May-code-source/UniAdmissionChatbot">Chatbot Application using<br />
-										NLP And Deep Learning</a></h2>
+										<h2><a href="https://github.com/May-code-source/UniAdmissionChatbot">Chatbot Application using NLP And Deep Learning<br />
+										</a></h2>
 									</header>
 									<a href="https://github.com/May-code-source/UniAdmissionChatbot" class="image fit"><img src="images/chatbot.png" alt="" /></a>
 									<p>An AI-powered chatbot to answer common university admission FAQs with the aim of enhancing operational efficiency.</p>
